--- a/src/LCB-PRJ/LCB_batch_predictions.ipynb
+++ b/src/LCB-PRJ/LCB_batch_predictions.ipynb
@@ -71,6 +71,7 @@
       ],
       "source": [
         "!pip install -U hopsworks --quiet\n",
+        "!pip3 install torch \n",
         "import hopsworks\n",
         "\n",
         "project = hopsworks.login()\n",
