--- a/src/LCB-PRJ/LCB_batch_predictions.ipynb
+++ b/src/LCB-PRJ/LCB_batch_predictions.ipynb
@@ -72,6 +72,8 @@
       "source": [
         "!pip install -U hopsworks --quiet\n",
         "!pip install torch \n",
+        "!pip install networkx\n",
+        "\n",
         "import hopsworks\n",
         "\n",
         "project = hopsworks.login()\n",
