--- a/src/LCB-PRJ/LCB_batch_predictions.ipynb
+++ b/src/LCB-PRJ/LCB_batch_predictions.ipynb
@@ -705,9 +705,10 @@
         "os.environ['TORCH'] = torch.__version__\n",
         "print(torch.__version__)\n",
         "\n",
-        "!pip install -q torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "!pip install -q torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "!pip install -q git+https://github.com/pyg-team/pytorch_geometric.git\n",
+        "#!pip install -q torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+        "#!pip install -q torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+        "#!pip install -q git+https://github.com/pyg-team/pytorch_geometric.git\n",
+        "!pip install torch-scatter torch-sparse torch-cluster torch-spline-conv torch-geometric -f https://data.pyg.org/whl/torch-1.12.0+cpu.html\n",
         "\n",
         "# Helper function for visualization.\n",
         "%matplotlib inline\n",
