--- a/src/LCB-PRJ/LCB_batch_predictions.ipynb
+++ b/src/LCB-PRJ/LCB_batch_predictions.ipynb
@@ -702,14 +702,22 @@
         "import joblib\n",
         "import os\n",
         "import torch\n",
+        "import sys\n",
+        "\n",
         "os.environ['TORCH'] = torch.__version__\n",
         "print(torch.__version__)\n",
         "\n",
-        "!pip install -q torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "!pip install -q torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "!pip install -q git+https://github.com/pyg-team/pytorch_geometric.git\n",
+        "!{sys.executable} -m pip install torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+        "!{sys.executable} -m pip install torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+        "!{sys.executable} -m pip install git+https://github.com/pyg-team/pytorch_geometric.git\n",
+        "!{sys.executable} -m pip install torch-geometric -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+        "\n",
+        "\n",
+        "#!pip install -q torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+        "#!pip install -q torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+        "#!pip install -q git+https://github.com/pyg-team/pytorch_geometric.git\n",
         "#!pip install torch-scatter torch-sparse torch-cluster torch-spline-conv torch-geometric -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "!pip install torch-geometric -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+        "#!pip install torch-geometric -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
         "\n",
         "# Helper function for visualization.\n",
         "%matplotlib inline\n",
