--- a/src/LCB-PRJ/LCB_batch_predictions.ipynb
+++ b/src/LCB-PRJ/LCB_batch_predictions.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -15,71 +15,182 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "\u001b[K     |████████████████████████████████| 120 kB 56.9 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 50 kB 5.3 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 132 kB 67.7 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 45 kB 3.5 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 68 kB 6.3 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 43 kB 2.4 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 4.9 MB 65.7 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 42 kB 1.5 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 2.8 MB 46.9 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 2.3 MB 56.5 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 109 kB 69.7 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 140 kB 65.3 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 4.1 MB 56.5 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 67 kB 6.4 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 1.6 MB 54.8 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 127 kB 72.7 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 500 kB 69.6 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 79 kB 4.7 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 9.8 MB 59.5 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 59 kB 6.8 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 57 kB 5.6 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 2.3 MB 54.2 MB/s \n",
-            "\u001b[?25h  Building wheel for hopsworks (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for hsfs (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for avro (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for hsml (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for pyhopshive (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for thrift (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Building wheel for twofish (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Copy your Api Key (first register/login): https://c.app.hopsworks.ai/account/api/generated\n",
-            "\n",
-            "Paste it here: ··········\n",
-            "Connected. Call `.close()` to terminate connection gracefully.\n",
-            "\n",
-            "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/3339\n"
+            "Note: you may need to restart the kernel to use updated packages.\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3,and in 3.9 it will stop working\n",
-            "DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated since Python 3.3,and in 3.9 it will stop working\n"
+            "WARNING: You are using pip version 21.3.1; however, version 22.3 is available.\n",
+            "You should consider upgrading via the 'c:\\Users\\Sim\\anaconda3\\python.exe -m pip install --upgrade pip' command.\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Connected. Call `.close()` to terminate connection gracefully.\n",
-            "Connected. Call `.close()` to terminate connection gracefully.\n"
+            "Requirement already satisfied: torch in c:\\users\\sim\\anaconda3\\lib\\site-packages (1.10.1)\n",
+            "Requirement already satisfied: typing-extensions in c:\\users\\sim\\anaconda3\\lib\\site-packages (from torch) (4.1.1)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "WARNING: You are using pip version 21.3.1; however, version 22.3 is available.\n",
+            "You should consider upgrading via the 'c:\\Users\\Sim\\anaconda3\\python.exe -m pip install --upgrade pip' command.\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: networkx in c:\\users\\sim\\anaconda3\\lib\\site-packages (2.8.7)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n",
+            "1.10.1+cpu\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "WARNING: You are using pip version 21.3.1; however, version 22.3 is available.\n",
+            "You should consider upgrading via the 'c:\\Users\\Sim\\anaconda3\\python.exe -m pip install --upgrade pip' command.\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Looking in links: https://data.pyg.org/whl/torch-1.10.1+cpu.htmlNote: you may need to restart the kernel to use updated packages.\n",
+            "Requirement already satisfied: torch-scatter in c:\\users\\sim\\anaconda3\\lib\\site-packages (2.0.9)\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "WARNING: You are using pip version 21.3.1; however, version 22.3 is available.\n",
+            "You should consider upgrading via the 'c:\\Users\\Sim\\anaconda3\\python.exe -m pip install --upgrade pip' command.\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Looking in links: https://data.pyg.org/whl/torch-1.10.1+cpu.html\n",
+            "Requirement already satisfied: torch-sparse in c:\\users\\sim\\anaconda3\\lib\\site-packages (0.6.15)\n",
+            "Requirement already satisfied: scipy in c:\\users\\sim\\anaconda3\\lib\\site-packages (from torch-sparse) (1.9.2)\n",
+            "Requirement already satisfied: numpy<1.26.0,>=1.18.5 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from scipy->torch-sparse) (1.23.4)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "WARNING: You are using pip version 21.3.1; however, version 22.3 is available.\n",
+            "You should consider upgrading via the 'c:\\Users\\Sim\\anaconda3\\python.exe -m pip install --upgrade pip' command.\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Collecting git+https://github.com/pyg-team/pytorch_geometric.git\n",
+            "  Cloning https://github.com/pyg-team/pytorch_geometric.git to c:\\users\\sim\\appdata\\local\\temp\\pip-req-build-rorkalem\n",
+            "  Resolved https://github.com/pyg-team/pytorch_geometric.git to commit 6869275ae8aabe000d80b2dbec311c58cf836469\n",
+            "  Preparing metadata (setup.py): started\n",
+            "  Preparing metadata (setup.py): finished with status 'done'\n",
+            "Requirement already satisfied: tqdm in c:\\users\\sim\\anaconda3\\lib\\site-packages (from torch-geometric==2.1.0) (4.64.0)\n",
+            "Requirement already satisfied: numpy in c:\\users\\sim\\anaconda3\\lib\\site-packages (from torch-geometric==2.1.0) (1.23.4)\n",
+            "Requirement already satisfied: scipy in c:\\users\\sim\\anaconda3\\lib\\site-packages (from torch-geometric==2.1.0) (1.9.2)\n",
+            "Requirement already satisfied: jinja2 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from torch-geometric==2.1.0) (2.11.3)\n",
+            "Requirement already satisfied: requests in c:\\users\\sim\\anaconda3\\lib\\site-packages (from torch-geometric==2.1.0) (2.27.1)\n",
+            "Requirement already satisfied: pyparsing in c:\\users\\sim\\anaconda3\\lib\\site-packages (from torch-geometric==2.1.0) (2.4.7)\n",
+            "Requirement already satisfied: scikit-learn in c:\\users\\sim\\anaconda3\\lib\\site-packages (from torch-geometric==2.1.0) (1.0)\n",
+            "Requirement already satisfied: MarkupSafe>=0.23 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from jinja2->torch-geometric==2.1.0) (2.0.1)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from requests->torch-geometric==2.1.0) (1.26.9)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from requests->torch-geometric==2.1.0) (2021.10.8)\n",
+            "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from requests->torch-geometric==2.1.0) (2.0.4)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from requests->torch-geometric==2.1.0) (3.3)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from scikit-learn->torch-geometric==2.1.0) (2.2.0)\n",
+            "Requirement already satisfied: joblib>=0.11 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from scikit-learn->torch-geometric==2.1.0) (1.1.0)\n",
+            "Requirement already satisfied: colorama in c:\\users\\sim\\anaconda3\\lib\\site-packages (from tqdm->torch-geometric==2.1.0) (0.4.4)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "  Running command git clone --filter=blob:none -q https://github.com/pyg-team/pytorch_geometric.git 'C:\\Users\\Sim\\AppData\\Local\\Temp\\pip-req-build-rorkalem'\n",
+            "WARNING: You are using pip version 21.3.1; however, version 22.3 is available.\n",
+            "You should consider upgrading via the 'c:\\Users\\Sim\\anaconda3\\python.exe -m pip install --upgrade pip' command.\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Looking in links: https://data.pyg.org/whl/torch-1.10.1+cpu.html\n",
+            "Requirement already satisfied: torch-geometric in c:\\users\\sim\\anaconda3\\lib\\site-packages (2.1.0)\n",
+            "Requirement already satisfied: jinja2 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from torch-geometric) (2.11.3)\n",
+            "Requirement already satisfied: requests in c:\\users\\sim\\anaconda3\\lib\\site-packages (from torch-geometric) (2.27.1)\n",
+            "Requirement already satisfied: numpy in c:\\users\\sim\\anaconda3\\lib\\site-packages (from torch-geometric) (1.23.4)\n",
+            "Requirement already satisfied: scipy in c:\\users\\sim\\anaconda3\\lib\\site-packages (from torch-geometric) (1.9.2)\n",
+            "Requirement already satisfied: pyparsing in c:\\users\\sim\\anaconda3\\lib\\site-packages (from torch-geometric) (2.4.7)\n",
+            "Requirement already satisfied: scikit-learn in c:\\users\\sim\\anaconda3\\lib\\site-packages (from torch-geometric) (1.0)\n",
+            "Requirement already satisfied: tqdm in c:\\users\\sim\\anaconda3\\lib\\site-packages (from torch-geometric) (4.64.0)\n",
+            "Requirement already satisfied: MarkupSafe>=0.23 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from jinja2->torch-geometric) (2.0.1)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from requests->torch-geometric) (3.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from requests->torch-geometric) (2021.10.8)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from requests->torch-geometric) (1.26.9)\n",
+            "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from requests->torch-geometric) (2.0.4)\n",
+            "Requirement already satisfied: joblib>=0.11 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from scikit-learn->torch-geometric) (1.1.0)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\sim\\anaconda3\\lib\\site-packages (from scikit-learn->torch-geometric) (2.2.0)\n",
+            "Requirement already satisfied: colorama in c:\\users\\sim\\anaconda3\\lib\\site-packages (from tqdm->torch-geometric) (0.4.4)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "WARNING: You are using pip version 21.3.1; however, version 22.3 is available.\n",
+            "You should consider upgrading via the 'c:\\Users\\Sim\\anaconda3\\python.exe -m pip install --upgrade pip' command.\n"
           ]
         }
       ],
       "source": [
-        "!pip install -U hopsworks --quiet\n",
-        "!pip install torch \n",
-        "!pip install networkx\n",
+        "%pip install -U hopsworks --quiet\n",
+        "%pip install torch \n",
+        "%pip install networkx\n",
+        "\n",
+        "os.environ['TORCH'] = torch.__version__\n",
+        "print(torch.__version__)\n",
+        "\n",
+        "%pip install torch-scatter -f https://data.pyg.org/whl/torch-1.10.1+cpu.html\n",
+        "%pip install torch-sparse -f https://data.pyg.org/whl/torch-1.10.1+cpu.html\n",
+        "%pip install git+https://github.com/pyg-team/pytorch_geometric.git\n",
+        "%pip install torch-geometric -f https://data.pyg.org/whl/torch-1.10.1+cpu.html\n",
         "\n",
         "import hopsworks\n",
+        "import joblib\n",
+        "import os\n",
+        "import torch\n",
+        "import sys\n",
         "\n",
-        "project = hopsworks.login()\n",
         "\n",
-        "fs = project.get_feature_store()\n",
-        "mr = project.get_model_registry()"
+        "#!{sys.executable} -m pip install torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+        "#!{sys.executable} -m pip install torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+        "#!{sys.executable} -m pip install git+https://github.com/pyg-team/pytorch_geometric.git\n",
+        "#!{sys.executable} -m pip install torch-geometric -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -659,6 +770,10 @@
         }
       ],
       "source": [
+        "project = hopsworks.login()\n",
+        "fs = project.get_feature_store()\n",
+        "mr = project.get_model_registry()\n",
+        "\n",
         "#start_date = (datetime.datetime.now() - datetime.timedelta(hours=48)) \n",
         "#end_date = (datetime.datetime.now()) \n",
         "print(start_date)\n",
@@ -749,25 +864,6 @@
         }
       ],
       "source": [
-        "import joblib\n",
-        "import os\n",
-        "import torch\n",
-        "import sys\n",
-        "\n",
-        "os.environ['TORCH'] = torch.__version__\n",
-        "print(torch.__version__)\n",
-        "\n",
-        "#!{sys.executable} -m pip install torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "#!{sys.executable} -m pip install torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "#!{sys.executable} -m pip install git+https://github.com/pyg-team/pytorch_geometric.git\n",
-        "#!{sys.executable} -m pip install torch-geometric -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "\n",
-        "\n",
-        "%pip install torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "%pip install torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "%pip install git+https://github.com/pyg-team/pytorch_geometric.git\n",
-        "%pip install torch-geometric -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "\n",
         "#!pip install -q torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
         "#!pip install -q torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
         "#!pip install -q git+https://github.com/pyg-team/pytorch_geometric.git\n",
@@ -2190,7 +2286,7 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3.7.2rc1 64-bit",
+      "display_name": "Python 3.8.13 ('base')",
       "language": "python",
       "name": "python3"
     },
@@ -2204,11 +2300,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.2rc1"
+      "version": "3.8.13"
     },
     "vscode": {
       "interpreter": {
-        "hash": "81fc4fe6b793cb5b4bcff06b99978e692b7ee0de8231fbbb49d88c051225a5b3"
+        "hash": "9e55cbc806429468d605c9f369e707839c83966a105a69bbddd2e461ddc736ba"
       }
     },
     "widgets": {
