--- a/src/LCB-PRJ/LCB_batch_predictions.ipynb
+++ b/src/LCB-PRJ/LCB_batch_predictions.ipynb
@@ -167,9 +167,11 @@
       ],
       "source": [
         "%pip install -U hopsworks --quiet\n",
-        "%pip install torch \n",
+        "%pip install torch --extra-index-url https://download.pytorch.org/whl/cpu \n",
         "%pip install networkx\n",
         "\n",
+        "import torch\n",
+        "torch.cuda.is_available()\n",
         "os.environ['TORCH'] = torch.__version__\n",
         "print(torch.__version__)\n",
         "\n",
@@ -181,7 +183,6 @@
         "import hopsworks\n",
         "import joblib\n",
         "import os\n",
-        "import torch\n",
         "import sys\n",
         "\n",
         "\n",
