--- a/src/LCB-PRJ/LCB_batch_predictions.ipynb
+++ b/src/LCB-PRJ/LCB_batch_predictions.ipynb
@@ -175,10 +175,10 @@
         "os.environ['TORCH'] = torch.__version__\n",
         "print(torch.__version__)\n",
         "\n",
-        "%pip install torch-scatter -f https://data.pyg.org/whl/torch-1.10.1+cpu.html\n",
-        "%pip install torch-sparse -f https://data.pyg.org/whl/torch-1.10.1+cpu.html\n",
+        "%pip install torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
+        "%pip install torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
         "%pip install git+https://github.com/pyg-team/pytorch_geometric.git\n",
-        "%pip install torch-geometric -f https://data.pyg.org/whl/torch-1.10.1+cpu.html\n",
+        "%pip install torch-geometric -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
         "\n",
         "import hopsworks\n",
         "import joblib\n",
