--- a/src/LCB-PRJ/LCB_batch_predictions.ipynb
+++ b/src/LCB-PRJ/LCB_batch_predictions.ipynb
@@ -167,8 +167,7 @@
       ],
       "source": [
         "%pip install -U hopsworks --quiet\n",
-        "%pip install torch --extra-index-url https://download.pytorch.org/whl/cpu \n",
-        "%pip install networkx\n",
+        "#pip install networkx\n",
         "\n",
         "import torch\n",
         "import os \n",
@@ -178,21 +177,7 @@
         "os.environ['TORCH'] = torch.__version__\n",
         "print(torch.__version__)\n",
         "\n",
-        "%pip install torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "%pip install torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "%pip install git+https://github.com/pyg-team/pytorch_geometric.git\n",
-        "%pip install torch-geometric -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "\n",
-        "import hopsworks\n",
-        "import joblib\n",
-        "\n",
-        "\n",
-        "#!{sys.executable} -m pip install torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "#!{sys.executable} -m pip install torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "#!{sys.executable} -m pip install git+https://github.com/pyg-team/pytorch_geometric.git\n",
-        "#!{sys.executable} -m pip install torch-geometric -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "\n",
-        "\n"
+        "import joblib\n"
       ]
     },
     {
@@ -772,6 +757,8 @@
         }
       ],
       "source": [
+        "import hopsworks\n",
+        "\n",
         "project = hopsworks.login()\n",
         "fs = project.get_feature_store()\n",
         "mr = project.get_model_registry()\n",
@@ -866,12 +853,6 @@
         }
       ],
       "source": [
-        "#!pip install -q torch-scatter -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "#!pip install -q torch-sparse -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "#!pip install -q git+https://github.com/pyg-team/pytorch_geometric.git\n",
-        "#!pip install torch-scatter torch-sparse torch-cluster torch-spline-conv torch-geometric -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "#!pip install torch-geometric -f https://data.pyg.org/whl/torch-${TORCH}.html\n",
-        "\n",
         "# Helper function for visualization.\n",
         "%matplotlib inline\n",
         "import networkx as nx\n",
@@ -879,7 +860,6 @@
         "\n",
         "from torch_geometric.nn import GCNConv\n",
         "import torch.nn.functional as F\n",
-        "\n",
         "\n",
         "the_model = mr.get_model(\"fraud\", version=4)\n",
         "model_dir = the_model.download()\n",
